press-photos-issue - remove photo white space

--- a/blocks/press-cards/press-cards.css
+++ b/blocks/press-cards/press-cards.css
@@ -98,6 +98,10 @@
         width: 15rem;
     }
 
+    .press-cards > ul > li > .press-cards-card-image > picture > img {
+        min-height: 12rem;
+    }
+
     .press-cards .landscape > ul > li, .press-cards .landscape > ul > li > .press-cards-card-image {
         width: 20rem;
     }
